--- a/DAndD/DAndD.fsproj
+++ b/DAndD/DAndD.fsproj
@@ -56,9 +56,9 @@
     <Compile Include="Serialization.fs" />
     <Compile Include="Model.fs" />
     <Compile Include="EventStore.fs" />
-    <None Include="Hainsey.fsx" />
-    <None Include="Play.fsx" />
+    <Compile Include="CommandHandler.fs" />
     <Compile Include="Program.fs" />
+    <None Include="Play.fsx" />
     <None Include="App.config" />
   </ItemGroup>
   <PropertyGroup>
