--- a/DAndD/DAndD.fsproj
+++ b/DAndD/DAndD.fsproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Model.fs" />
     <Compile Include="CommandHandler.fs" />
+    <Compile Include="Game.fs" />
     <Compile Include="Program.fs" />
     <None Include="Play.fsx" />
     <None Include="App.config" />
