just make it compile by commenting out some code

--- a/Server/Server.fsproj
+++ b/Server/Server.fsproj
@@ -50,6 +50,13 @@
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Messages\Messages.fsproj">
+      <Name>Messages</Name>
+      <Project>{fee54f79-7676-4182-8eca-22da3b234dee}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
