--- a/DAndD/DAndD.fsproj
+++ b/DAndD/DAndD.fsproj
@@ -51,8 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model.fs" />
-    <Compile Include="Game.fs" />
+    <Compile Include="Messages.fs" />
     <Compile Include="Player.fs" />
+    <Compile Include="Game.fs" />
     <Compile Include="Levels.fs" />
     <Compile Include="Program.fs" />
     <None Include="Play.fsx" />
