--- a/Client/Client.fsproj
+++ b/Client/Client.fsproj
@@ -51,6 +51,13 @@
     <None Include="App.config" />
     <None Include="paket.references" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAndD\DAndD.fsproj">
+      <Name>DAndD</Name>
+      <Project>{9f91e723-fa04-409d-ab7d-d662342eef42}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
