--- a/DAndD/DAndD.fsproj
+++ b/DAndD/DAndD.fsproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>9f91e723-fa04-409d-ab7d-d662342eef42</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>DAndD</RootNamespace>
     <AssemblyName>DAndD</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -50,17 +50,8 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model.fs" />
-    <Compile Include="Messages.fs" />
+    <Compile Include="Contract.fs" />
     <Compile Include="Helpers.fs" />
-    <Compile Include="Player.fs" />
-    <Compile Include="Cell.fs" />
-    <Compile Include="Game.fs" />
-    <Compile Include="Levels.fs" />
-    <Compile Include="Serialisation.fs" />
-    <Compile Include="Program.fs" />
-    <None Include="Play.fsx" />
-    <None Include="App.config" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
